<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/rgroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/btn_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/whiteRadioButton_text"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="27dp" />

        <RadioButton
            android:id="@+id/btn_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/redRadioButton_text"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="92dp" />

        <RadioButton
            android:id="@+id/btn_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/blueRadioButton_text"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="156dp" />

        <RadioButton
            android:id="@+id/btn_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/greenRadioButton_text"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="227dp" />

        <RadioButton
            android:id="@+id/btn_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yellowRadioButton_text"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="289dp" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_commit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@drawable/button_design"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="commitButton"
        android:text="@string/commitButton_text"
        tools:layout_editor_absoluteX="256dp"
        tools:layout_editor_absoluteY="376dp" />

</LinearLayout>